--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,12 @@
 <h1>Hello World</h1>
 <% @posts.each do |post|%>
-<div>
-	<div>
-		<p><%= post.title%></p>
-		<p><%= post.content%></p>
-		<span>
-			<%= link_to "show post", post_path(post)%>
-		</span>
-	</div>
+<div class="row">
+<div class="well col-md-8">
+	<p><%= post.title%></p>
+	<p><%= post.content%></p>
+	<span>
+		<%= link_to "show post", post_path(post)%>
+	</span>
+</div>
 </div>
 <%end%>
