--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header>
+	<%= render 'layouts/navigation' %>  
+	<!-- to call the _navigation.html.erb for navbar -->
+</header>
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-12">
@@ -14,5 +18,6 @@
 		</div>
 	</div>
 </div>
+
 </body>
 </html>
