--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,12 @@
-<h1>Hello World</h1>
+<!-- <h1>Hello World</h1> -->
+<!-- let title be  a partial -->
+<%= render 'shared/title', title: 'Post List'%>
 <% @posts.each do |post|%>
 <div class="row">
-<div class="well col-md-8">
-	<p><%= post.title%></p>
+<div class="well col-md-6">
+	<p>
+	<h4><%= post.title%></h4>
+	</p>
 	<p><%= post.content%></p>
 	<span>
 		<%= link_to "show post", post_path(post)%>
