--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,9 @@
+<%= render 'shared/title', title: "#{@post.title}"%>
+<!-- to replace title for once  -->
 <div class="container-fluid">
 	<div class="row">
 		<div class="col-md-8 well">
-			<h3><%=@post.title%></h3>
+<!-- 			<h3><%=@post.title%></h3> -->
 			<p>
 			<%= @post.content%>
 			</p>
