--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,19 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><%= link_to 'New Post', new_post_path %></li>
+        <% if logged_in? %>
+          <li><%= link_to "Welcome! #{current_user.name}"%></li>
+          <li><%= link_to 'New Post', new_post_path %></li>
+        <% else %>
+          <li><%= link_to 'Register', register_path %></li>
+        <% end %>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if logged_in? %>
+          <li><%= link_to 'Logout', logout_path %></li>
+        <% else %>
+          <li><%= link_to 'Login', login_path %></li>
+        <% end %>
       </ul>
     </div>
   </div>
