--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,25 +1,47 @@
 <%= render 'shared/title', title: "#{@post.title}"%>
-<!-- to replace title for once  -->
-<div class="container-fluid">
-	<div class="row">
-		<div class="col-md-8 well">
-<!-- 			<h3><%=@post.title%></h3> -->
-			<p>
-			<%= @post.content%>
-			</p>
-		</div>
-	</div>
 
-	<hr>
-	<h4><strong>All Comments</strong></h4>
-	<% @post.comments.each do |comment|%>
-	<div class="row">
-		<div class="col-md-8 well">
-			<p><%= comment.content%></p>
-		</div>
-	</div>
-	<%end%>
-	<div class="row">
-		<%= link_to 'go back to all posts', posts_path %>
-	</div>
+<div class="row">
+  <div class="col-md-8 well">
+    <h3><%= @post.title %></h3>
+    <p>
+      <%= @post.content %>
+    </p>
+    <br>
+    <small>posted by </small><%= " #{@post.user.name}" %>
+  </div>
+</div>
+
+<h4>All Comments:</h4>
+
+<% @post.comments.each do |comment| %>
+  <div class="row">
+    <div class="col-md-6 well">
+      <p>
+        <%= comment.content %>
+      </p>
+      <br>
+      <small>commented by </small><%= "#{comment.user.name}" %>
+    </div>
+  </div>
+<% end %>
+
+<% if logged_in? %>
+
+  <h4>Leave a comment:</h4>
+  <%= form_for [@post, @comment] do |f| %>
+    <div class="row">
+      <%= f.text_area :content, rows: 3, class: 'col-md-4' %>
+      <div class="col-md-2">
+        <%= f.submit 'Create Comment', class: 'btn btn-primary' %>
+      </div>
+    </div>
+    <br>
+  <% end %>
+
+<% end %>
+
+<hr>
+
+<div class="row">
+  <%= link_to 'go back to all posts', posts_path %>
 </div>
