--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,5 +1,5 @@
   <div class="row">
-    <div class="well col-md-6">
+    <div class="well col-md-6" id="showpost">
       <%= render partial: "categories/category", collection: post.categories %>
       <p>
         <h4><%= post.title %></h4>
@@ -8,7 +8,7 @@
         <%= post.content %>
       </p>
       <br>
-      <span>
+      <span class="showit">
         <%= link_to "show this post", post_path(post) %>
       </span>
     </div>
